--- a/app/07product/views/p_integral.html
+++ b/app/07product/views/p_integral.html
@@ -1,29 +1,28 @@
-<div class="col-xs-12" >
+<div class="col-xs-12" ng-show="funobj.hasOwnProperty('integral')" >
 
-	<table class="table table-bordered">
-	    <thead>
-	      <tr>
-	        <th class="col-md-6 text-center">销售品类型</th>
-	        <th class="col-md-2 text-center">积分</th>
-	        <!--<th class="col-md-2 text-center" ng-show="funobj.hasOwnProperty('integral')">操作</th>-->
-	      </tr>
-	    </thead>
-	    <tbody>
-	      <tr ng-repeat="obj in salejfobj.list">
-	        <td class="text-center">最高可用积分</td>
-	        <!-- <td class="text-center" ng-show="obj.integral_type == 0">提现积分</td>
-	        <td class="text-center" ng-show="obj.integral_type == 1">抵值积分</td> -->
-	        <td class="text-center">
-	          <input type="number" min="0" class="btn btn-block btn-default" placeholder="积分" ng-model="obj.integral_price" />
-	        </td>
-	        <!--<td class="text-center" ng-show="funobj.hasOwnProperty('integral')">
-	          	<a 	ng-click="deljf(obj.id)" 
-	          		class="btn btn-warning btn-xs">
-	          		删除
-	        	</a>
-	        </td>-->
-	      </tr>
-	    </tbody>
-  	</table>
+	<div class="panel panel-default form-horizontal">
+		<div class="panel-heading">
+			积分配置<button type="button" 
+				class="btn btn-xs btn-info pull-right"
+				ng-show="what == 'edit' || saleobj.id == ''"
+				ng-click="salejfsave()">
+				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+			</button>
+		</div>
+		<div class="panel-body">
+			<div class="container-fluid">
+				<div class="col-xs-12" >
+					<div class="col-xs-12 form-group" >
+						<div class="col-xs-2">
+							<label for="fxbt" class="pull-right text-right mt10">最高可用积分&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						</div>
+						<div class="col-xs-8">
+							<input type="number" min="0" name="fxbt" class="form-control form-inline" placeholder="积分" ng-model="obj.integral_price" />
+						</div>
+				</div>
+				</div>
+			</div>
+		</div>
+	</div>
 
 </div>
