--- a/app/07product/views/product.html
+++ b/app/07product/views/product.html
@@ -48,6 +48,14 @@
         ></productintegral>
       </uib-tab>
 
+      <!--<uib-tab index="5" heading="销售品分润设置" 
+      ng-if="saleobj.code !== '' && funobj.hasOwnProperty('skprice')">
+        <productintegral
+          saleobj="saleobj"
+          util="util"
+        ></productintegral>
+      </uib-tab>-->
+
     </uib-tabset>
 
 </div>
