--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -89,6 +89,14 @@
 					</div>
 
 					<div class="form-group">
+						<label class="col-xs-3 control-label">排序因子</label>
+						<div class="col-xs-9">
+							<input type="text" class="form-control" placeholder="请输入排序因子"
+							ng-model="saleobj.asort">
+						</div>
+					</div>
+
+					<div class="form-group">
 						<label class="col-xs-3 control-label">短信模板编号</label>
 						<div class="col-xs-9">
 							<!-- <input type="text" class="form-control" placeholder="请输入短信模板编号"
@@ -740,28 +748,34 @@
 			积分配置<button type="button" 
 				class="btn btn-xs btn-info pull-right"
 				ng-show="what == 'edit' || saleobj.id == ''"
-				ng-click="salejfsave()"
-			>
+				ng-click="salejfsave()">
 				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
 			</button>
 		</div>
 		<div class="panel-body">
 			<div class="container-fluid">
 				<div class="col-xs-12" >
+					<div class="col-xs-12 form-group" >
+						<div class="col-xs-2">
+							<label for="fxbt" class="pull-right text-right mt10">最高可用积分&nbsp;&nbsp;&nbsp;&nbsp;</label>
+						</div>
+						<div class="col-xs-8">
+							<input type="number" min="0" name="fxbt" class="form-control form-inline" placeholder="积分" ng-model="obj.integral_price" />
+						</div>
+				</div>
 
-					<div class="form-group">
-						<!-- <label class="col-xs-2 control-label">添加销售品积分</label>
+					<!--<div class="form-group">
+						 <label class="col-xs-2 control-label">添加销售品积分</label>
 						<div class="col-xs-4">
 							<select class="form-control" ng-model="salejfobj.addtype" >
 								<option value="">--请选择类型--</option>
 								<option value="0">提现积分</option>
 								<option value="1">抵值积分</option>
 				            </select>
-				       </div> -->
-						<!-- <div class="pull-right" ng-show="funobj.hasOwnProperty('integral')">
-							<a ng-click="addjf()" class="btn btn-success btn-sm"
-							>添加</a>
-						</div> -->
+				       </div>
+						<div class="pull-right" ng-show="funobj.hasOwnProperty('integral')">
+							<a ng-click="addjf()" class="btn btn-success btn-sm">添加</a>
+						</div> 
 					</div>
 
 					<table class="table table-bordered">
@@ -770,25 +784,23 @@
 					        <th class="col-md-6 text-center">销售品类型</th>
 					        <th class="col-md-2 text-center">积分</th>
 					        <!--<th class="col-md-2 text-center" ng-show="funobj.hasOwnProperty('integral')">操作</th>-->
-					      </tr>
+					      <!--</tr>
 					    </thead>
 					    <tbody>
 					      <tr ng-repeat="obj in salejfobj.list">
-					        <td class="text-center">最高可用积分</td>
-					        <!-- <td class="text-center" ng-show="obj.integral_type == 0">提现积分</td>
-					        <td class="text-center" ng-show="obj.integral_type == 1">抵值积分</td> -->
+					         <td class="text-center" ng-show="obj.integral_type == 0">提现积分</td>
 					        <td class="text-center">
 					          <input type="number" min="0" class="btn btn-block btn-default" placeholder="积分" ng-model="obj.integral_price" />
 					        </td>
-					        <!--<td class="text-center" ng-show="funobj.hasOwnProperty('integral')">
+					        <td class="text-center" ng-show="funobj.hasOwnProperty('integral')">
 					          	<a 	ng-click="deljf(obj.id)" 
 					          		class="btn btn-warning btn-xs">
 					          		删除
 					        	</a>
-					        </td>-->
+					        </td>
 					      </tr>
 					    </tbody>
-				  	</table>
+				  	</table>-->
 
 				</div>
 			</div>
@@ -841,6 +853,7 @@
 					<!--<br/>
 					<br/>
 				<div class="col-xs-12 form-group" >
+
 					<div class="col-xs-2">
 						<label for="lrl" class="pull-right text-right mt10">宜买说&nbsp;&nbsp;&nbsp;&nbsp;</label>
 					</div>
