--- a/app/22busscustomer/views/addprize.html
+++ b/app/22busscustomer/views/addprize.html
@@ -101,6 +101,31 @@
 						</div>
 					</div>
 
+					<div class="form-group">
+						<label class="col-xs-3 control-label">虚拟参与人数</label>
+						<div class="col-xs-6">
+							<input type="text" class="form-control" placeholder="请输入虚拟参与人数"
+							ng-model="info.fictitious_participate_num"
+							>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">分享标题</label>
+						<div class="col-xs-6">
+							<input type="text" class="form-control" placeholder="请输入分享标题"
+							ng-model="info.share_title"
+							>
+						</div>
+					</div>
+
+					<div class="form-group">
+						<label class="col-xs-3 control-label">分享内容</label>
+						<div class="col-xs-6">
+							<textarea rows="4" class="form-control" placeholder="请输入分享内容" ng-model="info.share_content"></textarea>
+						</div>
+					</div>
+
 
 					<div class="form-group">
 						<label class="col-xs-3 control-label">购买须知</label>
