--- a/app/22busscustomer/views/hotsearch.html
+++ b/app/22busscustomer/views/hotsearch.html
@@ -1,35 +1,68 @@
-<div class="col-xs-6 col-xs-offset-3" >
+<div class="col-sm-12">
 <div class="panel panel-default">
-	<div class="panel-heading text-center">添加热搜名词</div>
-<div class="panel-body">
-<div class="container-fluid form-horizontal ">
-	<div class="col-xs-12 form-horizontal" >
-	    <div class="form-group">
-			<label class="col-xs-3 control-label">热搜类型</label>
-			<div class="col-md-6">
-                <select class="form-control" ng-model="info.active_type" ng-change="selection(info.active_type)">
+    <div class="panel-body">
+        <div class="form-group form-inline">
+            <div class="col-sm-12">
+                  <input type="text" class="form-control" ng-model="info.value" placeholder="热搜名词">
+                  &nbsp;&nbsp;&nbsp;&nbsp;
+                  <select class="form-control" ng-model="info.type" ng-change="selection(info.type)">
                     <option value="">请选择</option>
-                    <option value="0">宜买宜卖</option>
                     <option value="1">义买义卖</option>
-                    <option value="2">积分商城</option>
-                </select>
-            </div>    
-		</div>
+                    <option value="3">积分商城</option>  
+                    <option value="4">宜买宜卖</option>
+                    </select>
+                  <div class="form-group pull-right">
+                      <button type="button" class="btn btn-primary" ng-click="add()">添加热搜</button>
+                      &nbsp;&nbsp;&nbsp;&nbsp;
+                  </div>
 
-        <div class="form-group">
-			<label class="col-xs-3 control-label">热搜名词</label>
-			<div class="col-md-6">
-                <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="info.activity_proposer_name">
-            </div>    
-			
-		</div>
 
-        <button type="button" class="btn btn-info col-xs-offset-5" ng-click="add()">确定<button>
-
-		
-	</div>
+            </div>
+        </div>
+    </div>
 </div>
+
+<div class="col-md-12 panel panel-default table-responsive">
+    <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th class="col-md-4 text-center">热搜名词</th>
+        <th class="col-md-4 text-center">热搜类型</th>
+        <th class="col-md-4 text-center">操作</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="obj in objs">
+        <td class="text-center">{{obj.value}}</td>
+        <td class="text-center">
+            <p ng-show="obj.type==1">义买义易</p>
+            <p ng-show="obj.type==3">积分商城</p>
+            <p ng-show="obj.type==4">宜买宜卖</p>
+        </td>
+        
+        <td class="text-center">
+          <a ng-click="change(obj.id)" class="btn btn-info btn-xs">修改</a>
+          <a ng-click="delete(obj.id)" class="btn btn-info btn-xs">删除</a>
+        </td>
+      </tr>
+    </tbody>
+    </table>
 </div>
+
+<div class="text-right">
+    <uib-pagination 
+      total-items="bigTotalItems" 
+      ng-model="bigCurrentPage" 
+      max-size="maxSize" 
+      class="pagination-sm" 
+      boundary-links="true" 
+      ng-change="getlist()"
+      items-per-page="itemsPerPage"
+      previous-text="上一页"
+      next-text="下一页"
+      first-text="首页"
+      last-text="末页"
+      rotate="false">
+    </uib-pagination>
 </div>
 </div>
