--- a/app/22busscustomer/views/addprize.html
+++ b/app/22busscustomer/views/addprize.html
@@ -67,7 +67,7 @@
 					</div>
 
 					<div class="form-group">
-					 <label for="inputDate" class="col-sm-3 control-label">奖品图片：</label>
+					 <label for="inputDate" class="col-sm-3 control-label">奖品图片</label>
 					 <div class="col-md-6">
 					      <img ng-src="{{info.img}}" width="100%" height="200" ng-model="info.img">
 					        <input type="file" nv-file-select uploader="uploader" / ng-hide="hide===true" ><br/>
