--- a/app/07product/views/aplist.html
+++ b/app/07product/views/aplist.html
@@ -25,7 +25,7 @@
     <thead>
       <tr>
         <th class="col-md-3 text-center">产品</th>
-        <th class="col-md-2 text-center">运营商</th>
+        <th class="col-md-2 text-center">供应商</th>
         <th class="col-md-2 text-center">产品分类</th>
         <th class="col-md-1 text-center">成本价</th>
         <th class="col-md-1 text-center">指导价</th>
