--- a/app/26ylb/views/addViewArtical.html
+++ b/app/26ylb/views/addViewArtical.html
@@ -61,7 +61,7 @@
       <div class="form-group">
         <label class="col-lg-3 control-label">详情页头图:</label>
           <div class="col-md-6">
-            <img ng-src="{{infoobj.picture1}}" width="100%" height="200" ng-model="infoobj.headimg">
+            <img ng-src="{{infoobj.headimg}}" width="100%" height="200" ng-model="infoobj.headimg">
               <input type="file" nv-file-select uploader="uploader" / ng-hide="hide===true" ><br/>
               <ul class="list-group">
                 <li class="list-group-item" ng-repeat="item in uploader.queue">
