--- a/app/26ylb/views/addAccommodationArtical.html
+++ b/app/26ylb/views/addAccommodationArtical.html
@@ -97,17 +97,12 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-lg-3 control-label">推荐套房:</label>
+        <label class="col-lg-3 control-label">套房及价格:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.activity">
+            <div class="ueditor" ng-model="infoobj.price"></div>      
         </div>
-      </div> 
-      <div class="form-group">
-        <label class="col-lg-3 control-label">套房价格:</label>
-        <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.fuwu">
-        </div>
-      </div> 
+      </div>
+  
       <div class="form-group">
         <label class="col-lg-5 control-label"></label>        
         <div class="col-lg-3">
