--- a/app/26ylb/views/addAccommodationArtical.html
+++ b/app/26ylb/views/addAccommodationArtical.html
@@ -87,13 +87,19 @@
       <div class="form-group">
         <label class="col-lg-3 control-label">地处位置:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.address">
+          <input type="text" class="form-control" placeholder="地处位置" ng-model="infoobj.address">
         </div>
       </div>
       <div class="form-group">
         <label class="col-lg-3 control-label">资讯电话:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.tel">
+          <input type="text" class="form-control" placeholder="资讯电话" ng-model="infoobj.tel">
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="col-lg-3 control-label">套房:</label>
+        <div class="col-lg-6">
+          <input type="text" class="form-control" placeholder="各套房中间以逗号分隔开" ng-model="infoobj.suite">
         </div>
       </div>
       <div class="form-group">
