--- a/app/26ylb/views/addFoodArtical.html
+++ b/app/26ylb/views/addFoodArtical.html
@@ -87,25 +87,25 @@
       <div class="form-group">
         <label class="col-lg-3 control-label">地处位置:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.address">
+          <input type="text" class="form-control" placeholder="地处位置" ng-model="infoobj.address">
         </div>
       </div>
       <div class="form-group">
         <label class="col-lg-3 control-label">资讯电话:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.tel">
+          <input type="text" class="form-control" placeholder="资讯电话" ng-model="infoobj.tel">
         </div>
       </div>
       <div class="form-group">
         <label class="col-lg-3 control-label">夜店活动:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.activity">
+          <input type="text" class="form-control" placeholder="夜店活动" ng-model="infoobj.activity">
         </div>
       </div> 
       <div class="form-group">
         <label class="col-lg-3 control-label">提供服务:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.fuwu">
+          <input type="text" class="form-control" placeholder="提供服务" ng-model="infoobj.fuwu">
         </div>
       </div> 
       <div class="form-group">
