--- a/app/26ylb/views/addHistoryArtical.html
+++ b/app/26ylb/views/addHistoryArtical.html
@@ -42,7 +42,7 @@
       <div class="form-group">
         <label class="col-lg-3 control-label">视频地址:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="必填" ng-model="infoobj.net">
+          <input type="text" class="form-control" placeholder="视频地址" ng-model="infoobj.net">
         </div>
       </div>
       <div class="form-group">
