--- a/app/26ylb/views/addShopArtical.html
+++ b/app/26ylb/views/addShopArtical.html
@@ -86,13 +86,13 @@
       <div class="form-group">
         <label class="col-lg-3 control-label">价格:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.price">
+          <input type="text" class="form-control" placeholder="价格" ng-model="infoobj.price">
         </div>
       </div>
       <div class="form-group">
         <label class="col-lg-3 control-label">路线:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.line">
+          <input type="text" class="form-control" placeholder="路线" ng-model="infoobj.line">
         </div>
       </div>
       
