--- a/app/26ylb/views/addTravelArtical.html
+++ b/app/26ylb/views/addTravelArtical.html
@@ -42,7 +42,7 @@
       <div class="form-group">
         <label class="col-lg-3 control-label">视频赏析地址:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="非必填" ng-model="infoobj.net">
+          <input type="text" class="form-control" placeholder="视频赏析地址" ng-model="infoobj.net">
         </div>
       </div>
       
