--- a/app/07product/views/tkttypemodel.html
+++ b/app/07product/views/tkttypemodel.html
@@ -100,10 +100,9 @@
 	<div class="form-group">
 		<label class="col-xs-2 control-label">预订说明</label>
 		<div class="col-xs-6">
-			<textarea class="form-control" rows="3" ng-model="objt.book_info"></textarea>
+			<div class="ueditor" ng-model="objt.book_info"></div>
 		</div>
 	</div>
-
 
 	<div class="form-group">
 		<label class="col-xs-2 control-label">打印设置</label>
