--- a/app/26ylb/views/addFoodArtical.html
+++ b/app/26ylb/views/addFoodArtical.html
@@ -91,21 +91,27 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="col-lg-3 control-label">资讯电话:</label>
+        <label class="col-lg-3 control-label">菜系类型:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="资讯电话" ng-model="infoobj.tel">
+          <select name="" id="" class="form-control"ng-model="infoobj.cuisinetype">
+            <option value="">请选择</option>            
+            <option value="0">中餐</option>
+            <option value="1">西餐</option>
+            <option value="2">外餐</option>
+            <option value="3">快餐</option>            
+          </select>
         </div>
       </div>
       <div class="form-group">
-        <label class="col-lg-3 control-label">夜店活动:</label>
+        <label class="col-lg-3 control-label">主营菜系:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="夜店活动" ng-model="infoobj.activity">
+          <input type="text" class="form-control" placeholder="主营菜系" ng-model="infoobj.cuisine">
         </div>
-      </div> 
+      </div>
       <div class="form-group">
         <label class="col-lg-3 control-label">提供服务:</label>
         <div class="col-lg-6">
-          <input type="text" class="form-control" placeholder="提供服务" ng-model="infoobj.fuwu">
+          <input type="text" class="form-control" placeholder="提供服务" ng-model="infoobj.service">
         </div>
       </div> 
       <div class="form-group">
