--- a/app/07product/views/imgtextinfo.html
+++ b/app/07product/views/imgtextinfo.html
@@ -49,7 +49,8 @@
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">销售品简介</label>
 			<div class="col-sm-9 col-xs-12">
-				<div text-angular ng-model="saleobj.detail" ng-disabled="util.what == 'info'"></div>
+				<div class="ueditor" ng-model="saleobj.detail"></div>
+				<!-- <div text-angular ng-model="saleobj.detail" ng-disabled="util.what == 'info'"></div> -->
 			</div>
 		</div>
 
