--- a/app/27appointment/views/appointmentlist.html
+++ b/app/27appointment/views/appointmentlist.html
@@ -32,7 +32,8 @@
         <td class="text-center">
             <a ng-click="edit(obj.id)" class="btn btn-info btn-xs">编辑</a>
             <a ng-click="delete(obj.id)" class="btn btn-danger btn-xs">删除</a>
-            <a ng-show="del_flg == 0" ng-click="offshelf(obj.id)" class="btn btn-danger btn-xs">下架</a>            
+            <a ng-show="obj.state == 1" ng-click="off(obj.id)" class="btn btn-warning btn-xs">下架</a>
+            <a ng-show="obj.state == 2" ng-click="on(obj.id)" class="btn btn-success btn-xs">上架</a>                                    
         </td>
       </tr>
     </tbody>
