--- a/app/07product/views/productinfoaffirm.html
+++ b/app/07product/views/productinfoaffirm.html
@@ -79,6 +79,48 @@
 		    </div>
 		</div>
 	</div>
+	
+	
+	<!-- 票付通 -->
+	<div class="col-xs-12 col-md-12 mt10">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">商品id</label>
+			<div class="col-xs-10">
+				<p class="form-control-static" ng-bind-html="affirm.sysaffirm_target_goods_code"></p>
+				<!--<select class="form-control" 
+				ng-model="affirm.sysaffirm_target_code" ng-disabled="true"
+				ng-options="ticket_sys_affirm.value as ticket_sys_affirm.label for ticket_sys_affirm in page.affirmlist"
+	            >
+	            </select>-->
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-12 col-md-12 mt10">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">商品景区id</label>
+			<div class="col-xs-10">
+				<p class="form-control-static" ng-bind-html="affirm.sysaffirm_target_goods_view"></p>
+				<!--<select class="form-control" 
+				ng-model="affirm.sysaffirm_target_code" ng-disabled="true"
+				ng-options="ticket_sys_affirm.value as ticket_sys_affirm.label for ticket_sys_affirm in page.affirmlist"
+	            >
+	            </select>-->
+			</div>
+		</div>
+	</div>
+	<div class="col-xs-12 col-md-12 mt10">
+		<div class="form-group">
+			<label class="col-sm-2 col-xs-12 control-label">商品供应商id</label>
+			<div class="col-xs-10">
+				<p class="form-control-static" ng-bind-html="affirm.sysaffirm_target_goods_supply"></p>
+				<!--<select class="form-control" 
+				ng-model="affirm.sysaffirm_target_code" ng-disabled="true"
+				ng-options="ticket_sys_affirm.value as ticket_sys_affirm.label for ticket_sys_affirm in page.affirmlist"
+	            >
+	            </select>-->
+			</div>
+		</div>
+	</div>
 <!--
 	<div class="col-xs-10"  ng-if="(saleobj.state == '0') && (util.what != 'info')">
 		<div class="form-group">
