--- a/app/07product/views/p_affirm.html
+++ b/app/07product/views/p_affirm.html
@@ -18,7 +18,7 @@
 		ng-show="affirm.sysaffirm_target_code == 'langdao' 
 		|| affirm.sysaffirm_target_code == 'huaxiapiaolian' 
 		|| affirm.sysaffirm_target_code == 'royaloc' 
-		|| affirm.sysaffirm_target_code == 'supply_tstc' ">
+		|| affirm.sysaffirm_target_code.indexOf('supply_tstc') == 0 ">
 		<div class="form-group">
 			<label class="col-xs-2 control-label">商品id</label>
 			<div class="col-xs-10">
