--- a/app/07product/views/productinfoaffirm.html
+++ b/app/07product/views/productinfoaffirm.html
@@ -21,7 +21,7 @@
 		ng-show="affirm.sysaffirm_target_code == 'langdao' 
 		|| affirm.sysaffirm_target_code == 'huaxiapiaolian' 
 		|| affirm.sysaffirm_target_code == 'royaloc' 
-		|| affirm.sysaffirm_target_code == 'supply_tstc' ">
+		|| affirm.sysaffirm_target_code.indexOf('supply_tstc') == 0 ">
 		<div class="form-group">
 			<label class="col-sm-2 col-xs-12 control-label">商品id</label>
 			<div class="col-xs-10">
